# QtTestGadget

./: CMakeLists.txt  README.md
cmake/: config.h.in
src/: CMakeLists.txt  appconstants.hpp  logger.cpp  logger.hpp  main.cpp
src/externalRes/: external.qrc
src/qml/: main.qml  qml.qrc
